--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Yandex music control",
-    "short_name": "Yandex Music",
-    "description": "Yandex music control",
+    "name": "__MSG_appName__",
+    "description": "__MSG_appDesc__",
+    "short_name": "__MSG_shortName__",
+    "default_locale": "en",
     "version": "1.1",
     "icons": {
         "128": "img/iconY.png"
@@ -12,7 +13,7 @@
         "persistent": false
     },
     "content_scripts": [{
-        "matches": ["<all_urls>"],
+        "matches": ["https://music.yandex.ua/*", "https://music.yandex.ru/*", "https://music.yandex.by/*", "https://avatars.yandex.net/*"],
         "all_frames": false,
         "js": ["js/contentScript.js"]
     }],
@@ -53,6 +54,7 @@
         "notifications",
         "https://music.yandex.ua/*",
         "https://music.yandex.ru/*",
-        "https://music.yandex.by/*"
+        "https://music.yandex.by/*",
+        "https://avatars.yandex.net/*"
     ]
 }
