--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,15 @@
 {
-    "manifest_version": 3,
+    "manifest_version": 2,
     "name": "__MSG_appName__",
     "description": "__MSG_appDesc__",
     "short_name": "__MSG_shortName__",
     "default_locale": "en",
-    "version": "1.5.6",
-    "web_accessible_resources": [{
-        "resources": ["js/injected.js"],
-        "matches": ["https://music.yandex.ua/*", "https://music.yandex.ru/*", "https://music.yandex.by/*", "https://avatars.yandex.net/*"]
-
-    }],
+    "version": "1.5.7",
+    "web_accessible_resources": ["js/injected.js"],
     "icons": {
         "200": "img/icon.png"
     },
-    "background.service_worker": {
+    "background": {
         "scripts": ["js/background.js"],
         "persistent": false
     },
@@ -22,7 +18,7 @@
         "all_frames": false,
         "js": ["js/contentScript.js"]
     }],
-    "action": {
+    "browser_action": {
         "default_icon": "img/icon.png",
         "default_popup": "popup.html"
     },
@@ -63,16 +59,12 @@
     "externally_connectable": {
         "matches": ["https://music.yandex.ua/*", "https://music.yandex.ru/*", "https://music.yandex.by/*"]
     },
-    "content_security_policy": {
-        "extension_pages": "script-src 'self'; object-src 'self'",
-        "sandbox": "sandbox allow-scripts; object-src 'self' https://ssl.google-analytics.com;"
-    },
+    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+
     "permissions": [
         "tabs",
         "notifications",
-        "storage"
-    ],
-    "host_permissions": [
+        "storage",
         "https://music.yandex.ua/*",
         "https://music.yandex.ru/*",
         "https://music.yandex.by/*",
