--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "__MSG_appDesc__",
     "short_name": "__MSG_shortName__",
     "default_locale": "en",
-    "version": "2.4.1",
+    "version": "3.0.0",
     "web_accessible_resources": [{
         "resources": ["js/injected.js", "./whatNew.json"],
         "matches": ["https://music.yandex.ua/*", "https://music.yandex.ru/*", "https://music.yandex.by/*", "https://avatars.yandex.net/*"]
@@ -68,8 +68,7 @@
         "tabs",
         "notifications",
         "storage",
-        "system.display",
-        "nativeMessaging"
+        "system.display"
     ],
     "host_permissions": [
         "https://music.yandex.ua/*",
