--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,10 +1,10 @@
 {
     "manifest_version": 3,
-    "name": "Yandex Music",
+    "name": "Yandex Music Dev",
     "description": "__MSG_appDesc__",
     "short_name": "__MSG_shortName__",
     "default_locale": "en",
-    "version": "3.0.3",
+    "version": "3.1.0",
     "web_accessible_resources": [{
         "resources": ["js/injected.js", "./what-new.json"],
         "matches": ["https://music.yandex.ua/*", "https://music.yandex.ru/*", "https://music.yandex.by/*", "https://avatars.yandex.net/*"]
