--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,13 +4,13 @@
     "description": "__MSG_appDesc__",
     "short_name": "__MSG_shortName__",
     "default_locale": "en",
-    "version": "3.3.6",
+    "version": "3.4.0",
     "web_accessible_resources": [{
         "resources": ["js/ExecutionDelay.js", "js/injected.js", "./what-new.json"],
         "matches": ["https://music.yandex.ua/*", "https://music.yandex.ru/*", "https://music.yandex.by/*", "https://avatars.yandex.net/*"]
     }],
     "icons": {
-        "200": "img/icon-dev.png"
+        "200": "img/icon.png"
     },
     "background": {
         "service_worker": "js/background.js"
@@ -21,7 +21,7 @@
         "js": ["js/content-script.js"]
     }],
     "action": {
-        "default_icon": "img/icon-dev.png",
+        "default_icon": "img/icon.png",
         "default_popup": "index.html"
     },
     "commands": {
